test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/cfg_attr_two_args.sw
library;

#[cfg(target = "fuel")]
pub fn ok_1() {}

#[cfg(target = "fuel", program_type = "library")]
pub fn not_ok() {}